2011-02-25  Vangelis Kokkevis  <vangelis@chromium.org>

        Reviewed by Simon Fraser.

        Update the clip layer size whenever the root layer's size and position
        is updated. This only affects the accelerated compositing path.
        https://bugs.webkit.org/show_bug.cgi?id=55103

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::updateRootLayerPosition):

        Test: platform/chromium/compositing/layout-width-change.html

        * rendering/RenderLayerCompositor.cpp:
        (WebCore::RenderLayerCompositor::updateRootLayerPosition):

2011-02-25  Ned Holbrook  <nholbrook@apple.com>

        Reviewed by Dan Bernstein.

        Minimize calls to ubrk_setText()
        https://bugs.webkit.org/show_bug.cgi?id=54912
        <rdar://problem/9032774>

        Avoid calling ubrk_setText() once per call to isBreakable() by using a LazyLineBreakIterator, which defers
        break iterator creation until needed. This requires replacing the global line break iterator primitive with a
        version that can be nested, since in some cases two iterators may need to be outstanding. In particular,
        layoutInlineChildren() may indirectly call computePreferredLogicalWidths() and each may need an iterator.
        In a test with a paragraph of Japanese text, this reduced the number of ubrk_setText() calls from 164 to 1.

        * platform/text/TextBreakIterator.h: Add LazyLineBreakIterator.
        (WebCore::LazyLineBreakIterator::LazyLineBreakIterator):
        (WebCore::LazyLineBreakIterator::~LazyLineBreakIterator):
        (WebCore::LazyLineBreakIterator::string):
        (WebCore::LazyLineBreakIterator::length):
        (WebCore::LazyLineBreakIterator::get):
        (WebCore::LazyLineBreakIterator::reset):
        * platform/text/TextBreakIteratorICU.cpp: Replace lineBreakIterator() primitive with acquireLineBreakIterator()/releaseLineBreakIterator().
        (WebCore::acquireLineBreakIterator):